# cicd_lesson

./: .gitignore  Dockerfile  README.md  backup.py  celerybeat-schedule  config.py  docker-compose.yml  entry-point.sh  pyproject.toml  worker.py  wsgi.py
.github/workflows/: app.yaml
app/: __init__.py  logger.py
app/models/: user.py  utils.py
app/pydantic_models/: __init__.py  auth.py  basic_models.py
app/static/assets/upload/: change_in_monthly_return_as_function_of_first_payment.csv
app/views/: __init__.py  auth.py  blueprint.py  file_ulploads.py
db_dump/: 1650971559.7023787.dump  1650971562.6965477.dump  1650971565.7008522.dump  1650971568.6968873.dump  1650971571.6917095.dump  1650971574.7003942.dump  1650971580.6972003.dump
migrations/versions/: 1b8beb68aa6f_.py  965a055f12fe_.py  c1df3c198017_test.py  c7d90ce047bd_.py
tests/: test_auth.py  utils.py
